# wallet-rust

./: .gitignore  CHANGELOG-v0.md  Cargo.toml  README.md
.github/workflows/: publish.yml
resources/views/: index.mustache  month.mustache  year.mustache
src/: main.rs
wallet_lib/: Cargo.toml
wallet_lib/src/: command.rs  date.rs  entry.rs  epic.rs  ext.rs  lib.rs  mustache.rs  number.rs  string.rs  types.rs  wallet.rs  yaml.rs
