[package]
name = "wallet-app"
description = "CLI application using wallet-lib to manage your finances."
version = "0.0.0"
license = "GPL-3.0-or-later"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://fox21.at"
documentation = "https://fox21.at"
keywords = ["wallet", "app", "cli"]
categories = ["finances"]
edition = "2018"

[dependencies]
wallet-lib = { path = "wallet_lib", version = "0.0.0" }
clap = "^2.33.0"

[workspace]
members = [
    "wallet_lib",
]

[[bin]]
name = "wallet"
path = "src/main.rs"
