[package]
name = "wallet-app"
description = "CLI application using wallet-lib to manage your finances."
version = "0.1.0-dev.1"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/wallet-rust"
documentation = "https://github.com/TheFox/wallet-rust"
repository = "https://github.com/TheFox/wallet-rust"
keywords = ["wallet", "app", "cli"]
categories = ["finances"]
edition = "2018"

[dependencies]
wallet-lib = { path = "wallet_lib" }
clap = "^2.33.0"

[workspace]
members = [
    "wallet_lib",
]

[[bin]]
name = "wallet"
path = "src/main.rs"
