[package]
name = "wallet-app"
description = "CLI application using wallet-lib to manage your finances."
version = "0.1.0-dev.3"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/wallet-rust"
documentation = "https://github.com/TheFox/wallet-rust"
repository = "https://github.com/TheFox/wallet-rust"
keywords = ["wallet"]
categories = ["cli", "finances"]
edition = "2018"
default-run = "wallet"

[dependencies]
wallet-lib = { path = "wallet_lib" }
clap = "^2.33.0"
chrono = "0.4.10"

[workspace]
members = [
    "wallet_lib",
]

[profile.release]
panic = 'abort'

[[bin]]
name = "wallet"
path = "src/main.rs"
