[package]
name = "wallet-lib"
description = "A spreadsheet likewise Rust library to track your finances."
version = "0.0.0"
license = "GPL-3.0-or-later"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://fox21.at"
documentation = "https://fox21.at"
keywords = ["wallet", "lib"]
categories = ["finances"]
edition = "2018"

[dependencies]
