[package]
name = "wallet-lib"
description = "A spreadsheet likewise Rust library to track your finances."
version = "0.1.0-dev"
license = "MIT"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/wallet-rust"
documentation = "https://github.com/TheFox/wallet-rust"
repository = "https://github.com/TheFox/wallet-rust"
keywords = ["wallet", "lib"]
categories = ["finances"]
edition = "2018"

[dependencies]
regex = "^1.3.1"
chrono = "^0.4.10"
